--- a/ubuntu.setup.yaml
+++ b/ubuntu.setup.yaml
@@ -3,3 +3,23 @@
   tasks:
   - name: install zsh
     apt: name=zsh
+  - name: Change shell
+    shell: chsh -s `which zsh`
+  - name: Install ohmyzsh
+    shell: curl -L https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh | sh
+  - name: Install zsh plugin for autosuggestions
+    ansible.builtin.git:
+      repo: 'https://github.com/zsh-users/zsh-autosuggestions.git'
+      dest: '~/.oh-my-zsh/plugins/zsh-autosuggestions'
+  - name: Update our zshrc
+    shell: sed -i 's/(git/(git zsh-autosuggestions/' ~/.zshrc
+  - name: Install node
+    apt:
+      name: ['nodejs', 'npm']
+  - name: Install n
+    npm: name=n
+  - name: n 14
+    shell: n 14
+  - name: Install github cli
+    apt:
+      name: ['gh']
